<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:amdroid="http://schemas.android.com/tools"
    android:layout_margin="1dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        amdroid:background="?attr/colorPrimary"
        android:layout_margin="0dp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/product_image"
            android:padding="2dp" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/ivProduct"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/ivProduct"
            android:text="@string/description"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/labelProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/ivProduct"
            android:text="@string/label_price"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/labelProductPrice"
            android:text="@string/price"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>