<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelFirstName"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/label_first_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/settingsFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:autofillHints="First Name"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

        <TextView
            android:id="@+id/labelLastName"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/label_last_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/settingsLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:autofillHints="Last Name"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameLayout">

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/label_email"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settingsEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/themeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout">

        <TextView
            android:id="@+id/labelTheme"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/label_theme"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/settingsTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:entries="@array/theme_modes"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fontSizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeLayout">

        <TextView
            android:id="@+id/labelFontSize"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/label_font_size"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/fontSizeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:entries="@array/font_size_options"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fontSizeLayout">

        <TextView
            android:id="@+id/labelLanguage"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/select_language"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:entries="@array/language_options"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageLayout"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSaveSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>